--- a/client/index.html
+++ b/client/index.html
@@ -4,53 +4,7 @@
 <head>
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/vuetify/1.5.14/vuetify.min.css" rel="stylesheet" />
-  <style>
-    html {
-      font-family: Roboto, Arial, sans;
-    }
-
-    .scrolly textarea {
-      min-height: 300px;
-      white-space: pre;
-      overflow: scroll;
-    }
-
-    .fab-container {
-      top: 50%;
-      right: -25px;
-    }
-
-    .video-container {
-      background-color: black;
-      width: 100%;
-      height: 100%;
-    }
-
-    .video-container video {
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-
-    .loading {
-      position: absolute;
-      top: 50%;
-      width: 100%;
-      text-align: center;
-      color: #E0E0E0;
-    }
-
-    .loading-text {
-      margin-top: 1em;
-    }
-
-    canvas {
-      background: black;
-    }
-  </style>
+  <link rel="stylesheet" href="css/style.css" type="text/css">
   <title>WebRTC</title>
 </head>
 
@@ -304,10 +258,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.9/vue.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vuetify/1.5.14/vuetify.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue-spinner@1.0.3/dist/vue-spinner.min.js"></script>
-<script src="gamepad.js?ts=1"></script>
-<script src="input.js?ts=1"></script>
-<script src="signalling.js?ts=1"></script>
-<script src="webrtc.js?ts=1"></script>
-<script src="app.js?ts=1"></script>
+<script src="js/gamepad.js?ts=1"></script>
+<script src="js/input.js?ts=1"></script>
+<script src="js/signalling.js?ts=1"></script>
+<script src="js/webrtc.js?ts=1"></script>
+<script src="js/app.js?ts=1"></script>
 
 </html>
