Changed web viewer title

--- a/web_viewer/index.html
+++ b/web_viewer/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Cloud 3D Visualization</title>
+	<title>WebViewer</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
