--- a/client/index.html
+++ b/client/index.html
@@ -149,6 +149,13 @@
                 </v-select>
               </p>
               <p>
+                <v-select :items="windowResolutionOptions" label="Window Resolution" menu-props="left"
+                  v-model="windowResolution" hint="Window resolution selection, will reload window on change"
+                  persistent-hint>
+                </v-select>
+              </p>
+              <p>
+                Signalling Stats:
               <ul>
                 <li>Peer connection state: <b>{{ status }}</b></li>
                 <li>Peer connection type: <b>{{ connectionStatType }}</b></li>
@@ -164,7 +171,7 @@
               <ul>
                 <li>Latency: <b>{{ connectionVideoLatency }} ms</b></li>
                 <li>Video: <b>{{ connectionCodec }} {{ connectionResolution }}</b></li>
-                <li>Window size: <b>{{ windowResolution[0] }}x{{ windowResolution[1] }}</b></li>
+                <li>Window size: <b>{{ currentWindowResolution[0] }}x{{ currentWindowResolution[1] }}</b></li>
                 <li>Video decoder: <b>{{ connectionVideoDecoder }}</b></li>
                 <li>Frame rate: <b>{{ connectionFrameRate }} fps</b></li>
                 <li>Bit rate: <b>{{ connectionVideoBitrate }} mbps</b></li>
